---
source: miniscript/src/tests.rs
expression: result
---
print 1 == 2 > 1 < 3
------
 0: $0 = 1          |  
 1: $1 = 1          |  1
 2: $2 = 2          |  2
 3: $1 = $1 == $2   |  1 == 2
 4: $0 = $0 and $1  |  1 == 2
 5: $1 = 1          |  1
 6: $1 = $2 > $1    |  2 > 1
 7: $0 = $0 and $1  |  1 == 2 > 1
 8: $1 = 3          |  3
 9: $1 = $1 < $1    |  1 < 3
10: $0 = $0 and $1  |  1 == 2 > 1 < 3
11: $0 = print $0   |  print 1 == 2 > 1 < 3
12: return          |  
